--- a/views/login.html
+++ b/views/login.html
@@ -1,25 +1,23 @@
 
 <div class="container">
     
-<div class="card blue-grey white">
-    <div class="card-content white-text">
-        <span class="card-title"></span>
+<div class="card blue-grey white" class="card-login">
+    <div class="card-content ">
+        <span class="card-title">Login</span>
         
         <div class="rows">
-            <div class="col s12 l6">
+            <div class="input-field col s12 l6">
                 <input type="text" name="" id="" value="{{Nombre}}">
+                <label>User name</label>
             </div>
-            <div class="col s12 l6">
+            <div class="input-field col s12 l6">
                 <input type="text" name="" id="" value="{{Password}}">
+                <label>Password</label>
             </div>
-            <div class="col s12 l6">
-                <button type="submit"></button>
-            </div>            
         </div>
     </div>
     <div class="card-action">
-        <a href="#">This is a link</a>
-        <a href="#">This is a link</a>
+        <a class="waves-effect waves-light btn">Ingresar</a>
     </div>
 </div>
 
