--- a/views/partials/cabecera.html
+++ b/views/partials/cabecera.html
@@ -3,3 +3,16 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 <link rel="stylesheet" href="/app/css/style.css">
+
+<nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">Logo</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        
+        <li>
+            <label>User name</label>
+            <a class="waves-effect waves-light btn">Button</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
