Diseño del Login terminado y Diseño de Home en proceso

--- a/views/home.html
+++ b/views/home.html
@@ -1,1 +1,13 @@
-<h1>Hola, Claudia y Jorge</h1>
+<div class="container">
+
+    <h3>Elige la tarea que deseas realizar.</h3>
+
+    <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>Mantenimiento</a>
+    <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>O.C y Obras</a>
+    <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>Consultas</a>
+    <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>Reportes</a>
+
+
+
+    
+</div>
