--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css" type="text/css" MEDIA=screen>
+    <link rel="stylesheet" href="/public/css/style.css" type="text/html" >
     <title>{{titulo_pagina}}</title>
     {{> cabecera}}
 </head>
@@ -15,6 +23,6 @@
 
     </main>
     
-    {{> footer}}
+    
 </body>
 </html>
