--- a/views/partials/cabecera.html
+++ b/views/partials/cabecera.html
@@ -2,17 +2,25 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-<link rel="stylesheet" href="/app/css/style.css">
+<link rel="stylesheet" href="/public/css/style.css">
 
+<!-- Dropdown Structure -->
+<ul id="dropdown1" class="dropdown-content">
+  <li><a href="#!">one</a></li>
+  <li><a href="#!">two</a></li>
+  <li class="divider"></li>
+  <li><a href="#!">three</a></li>
+</ul>
 <nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Logo</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        
-        <li>
-            <label>User name</label>
-            <a class="waves-effect waves-light btn">Button</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <div class="nav-wrapper" style="background-color:#0034AC; padding: 1% 0 6% 0;" >
+    <a href="#!" class="brand-logo"><img src="/public/images/logo-blanco.png"></a>
+    <ul class="right hide-on-med-and-down">
+      <!-- Dropdown Trigger -->
+      <li>
+        <a class="dropdown-trigger" href="#!" data-target="dropdown1">
+          <i class="material-icons right">account_circle</i>
+        </a>
+      </li>
+    </ul>
+  </div>
+</nav>
