--- a/views/home.html
+++ b/views/home.html
@@ -1,13 +1,17 @@
 <div class="container">
-
+    
     <h3>Elige la tarea que deseas realizar.</h3>
 
-    <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>Mantenimiento</a>
-    <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>O.C y Obras</a>
-    <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>Consultas</a>
-    <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>Reportes</a>
+    <div class="row" style="text-align: center; margin-top: 50px;">
 
+        <a class="waves-effect waves-light btn-large" style="width:35%; height:150px; margin-right: 3%; color: #0034AC; background-color:ivory;"><i class="material-icons left">cloud</i>Mantenimiento</a>
+        <a class="waves-effect waves-light btn-large" style="width:35%; height:150px; color: #0034AC; background-color: ivory;"><i class="material-icons left">cloud</i>O.C y Obras</a>
+        <br>
+        <a class="waves-effect waves-light btn-large" style="width:35%; height:150px; margin-right: 3%; margin-top: 5%; color: #0034AC; background-color: ivory;"><i class="material-icons left">cloud</i>Consultas</a>
+        <a class="waves-effect waves-light btn-large" style="width:35%; height:150px; margin-top: 5%; color: #0034AC; background-color: ivory;"><i class="material-icons left">cloud</i>Reportes</a>
 
+    </div>
 
     
 </div>
+
