Se finalizó el Módulo de Mantenimiento

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,11 @@ body {
 
   .card-login{  
     display: block;
-  width: 50%;
-  height: auto;  
+    width: 50%;
+    height: auto;  
+  
+  }
+
+  .btn{
+    background-color: aliceblue;
   }
