--- a/views/login.html
+++ b/views/login.html
@@ -1,26 +1,26 @@
 
 <div class="container" style="padding: 6% 15% 0 15%;">
 
-    <div class="card blue-grey white" class="card-login">
+    <div class="card white" class="card-login">
     <div class="card-content" style="padding: 10% 15% 0 15%;">
-        <span class="card-title" style="font-size: 28pt; font-weight:600 ;">Bienvenida/o.</span>
+        <span class="card-title" style="font-size: 28pt; font-weight:600; color: #454545;">Bienvenida/o.</span>
         <span style="font-size: 14pt; color: gray;">Por favor ingresa a tu cuenta.</span>
-        <div class="rows" style="margin-top: 50px;">
+        <div class="rows" style="margin-top: 50px; margin-bottom: 50px;">
             <div class="input-field col s12 l6">
-                <i class="material-icons prefix">account_circle</i>
+                <i class="material-icons prefix" style="color: #454545;">account_circle</i>
             <input type="text" name="" id="nombre" value="{{Nombre}}">
                 <label>User name</label>
             </div>
             <div class="input-field col s12 l6">
-                <i class="material-icons prefix">lock</i>
+                <i class="material-icons prefix" style="color: #454545;">lock</i>
                 
                 <input type="password" name="" id="password" value="{{Password}}">
                 <label>Password</label>
             </div>
         </div>
     </div>
-    <div class="card-action" style="text-align: center; padding: 6% 0 8% 0;">
-        <a class="waves-effect waves-light btn">Ingresar</a>
+    <div class="card-action" style="text-align: center; padding: 7% 0 8% 0; background-color: #F5F5F5;">
+        <a class="waves-effect waves-light btn" style="background-color:#3AAC00;" id="button">Ingresar</a>
     </div>
 </div>
 
