--- a/views/mant-cc-obras.html
+++ b/views/mant-cc-obras.html
@@ -1,15 +1,17 @@
-<div class="container">
+<div class="container" >
 
-    <h3>Centro de Costos y Obras</h3>
+    
+        <h4>Centro de Costos y Obras</h4>
+    
 
     <div class="row">
-        <div class="input-field col s12 l6">
+        <div class="input-field col s12 l5">
             <input type="text" name="" id="nombre" value="{{Nombre}}">
             <label>Nombre de la Obra</label>
         </div>
     
-        <div class="input-field col s12 l6">
-            <a class="waves-effect waves-light btn-small"><i class="material-icons left">search</i></a>
+        <div class="input-field col s12 l7">
+            <a class="waves-effect waves-light btn-small" style="background-color: #3AAC00;"><i class="material-icons">search</i></a>
         </div>
     </div>
 
@@ -18,17 +20,17 @@
             <span>Estado</span>
             <p>
               <label>
-                <input name="group1" type="radio" checked />
+                <input name="group1" type="radio" />
                 <span>Pendiente</span>
               </label>
 
               <label>
-                <input name="group1" type="radio" checked />
+                <input name="group1" type="radio" />
                 <span>Indefinido</span>
               </label>
 
               <label>
-                <input name="group1" type="radio" checked />
+                <input name="group1" type="radio" />
                 <span>Finalizado</span>
               </label>
             </p>
@@ -72,12 +74,14 @@
 
     </div>
 
+
+
     <div class="row" style="text-align: center;">
 
-        <a class="waves-effect waves-light btn">Nuevo</a>
-        <a class="waves-effect waves-light btn">Guardar</a>
-        <a class="waves-effect waves-light btn">Modificar</a>
-        <a class="waves-effect waves-light btn">Eliminar</a>
+        <a class="waves-effect waves-light btn" style="background-color: #3AAC00;">Nuevo</a>
+        <a class="waves-effect waves-light btn" style="background-color: #3AAC00;">Guardar</a>
+        <a class="waves-effect waves-light btn" style="background-color: #3AAC00;">Modificar</a>
+        <a class="waves-effect waves-light btn" style="background-color: #3AAC00;">Eliminar</a>
 
     </div>
 
