--- a/views/mant-proveedores.html
+++ b/views/mant-proveedores.html
@@ -10,7 +10,7 @@
         </div>
 
         <div class="input-field col s12 l6">
-            <a class="waves-effect waves-light btn-small"><i class="material-icons left">search</i></a>
+            <a class="waves-effect waves-light btn-small"><i class="material-icons">search</i></a>
         </div>
     </div>
 
