Diseño módulo Centro de Costos

--- a/views/home.html
+++ b/views/home.html
@@ -4,11 +4,11 @@
 
     <div class="row" style="text-align: center; margin-top: 50px;">
 
-        <a class="waves-effect waves-light btn-large" style="width:35%; height:150px; margin-right: 3%; color: #0034AC; background-color:#F5F5F5;"><i class="material-icons left">settings</i>Mantenimiento</a>
-        <a class="waves-effect waves-light btn-large" style="width:35%; height:150px; color: #0034AC; background-color: #F5F5F5;"><i class="material-icons left">library_add</i>Centro de Costos y Obras</a>
-        <br>
-        <a class="waves-effect waves-light btn-large" style="width:35%; height:150px; margin-right: 3%; margin-top: 5%; color: #0034AC; background-color: #F5F5F5;"><i class="material-icons left">remove_red_eye</i>Consultas</a>
-        <a class="waves-effect waves-light btn-large" style="width:35%; height:150px; margin-top: 5%; color: #0034AC; background-color: #F5F5F5;"><i class="material-icons left">style</i>Reportes</a>
+        <a class="waves-effect waves-light btn-large" style="width:35%; height:150px; margin-right: 3%; color: #0034AC; background-color:#F5F5F5;"><i class="material-icons">settings</i>Mantenimiento</a>
+        <a class="waves-effect waves-light btn-large" style="width:35%; height:150px; color: #0034AC; background-color: #F5F5F5;"><i class="material-icons">library_add</i>Centro de Costos y Obras</a>
+        
+        <a class="waves-effect waves-light btn-large" style="width:35%; height:150px; margin-right: 3%; margin-top: 5%; color: #0034AC; background-color: #F5F5F5;"><i class="material-icons">remove_red_eye</i>Consultas</a>
+        <a class="waves-effect waves-light btn-large" style="width:35%; height:150px; margin-top: 5%; color: #0034AC; background-color: #F5F5F5;"><i class="material-icons">style</i>Reportes</a>
 
     </div>
 
