--- a/views/partials/cabecera.html
+++ b/views/partials/cabecera.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="/public/css/style.css">
 
 <!-- Dropdown Structure -->
+<div class="row">
 <ul id="dropdown1" class="dropdown-content">
   <li><a href="#!">one</a></li>
   <li><a href="#!">two</a></li>
@@ -24,3 +25,4 @@
     </ul>
   </div>
 </nav>
+</div>
