--- a/views/registro-orden-compra-servicios.html
+++ b/views/registro-orden-compra-servicios.html
@@ -24,16 +24,16 @@
     </div>
 
     <div class="row">
-        <div class="input-field col s3 l3">
+        <div class="input-field col s4 l4">
             <input placeholder="" type="text" class="">
             <label for="">Proveedor</label>
         </div>
 
-        <div class="input-field col s13 l3">
+        <div class="input-field col s13 l2">
             <a class="waves-effect waves-light btn-small"><i class="material-icons">search</i></a>
         </div>
 
-        <div class="col s3 l3">
+        <div class="col s3 l4">
             <label for="">Centro de Costos</label>
             <select class="browser-default">
                 <option value="" disabled selected></option>
@@ -42,10 +42,12 @@
                 <option value="">Option 3</option>
             </select>
         </div>
-    </div>
+    
 
-    <div class="input-field col s3 l3">
-        
+        <div class="input-field col s2 l2">
+            <input disabled value="Pendiente" id="disabled" type="text" class="validate">
+            <label for="disabled">Estado</label>
+        </div>
     </div>
 
 </div>
