Diseño de Registro de Orden Compra

--- a/views/mant-cc-obras.html
+++ b/views/mant-cc-obras.html
@@ -1,8 +1,8 @@
 <div class="container" >
 
-    
+    <div class="row" style="margin: 6% 0 5% 0;">    
         <h4>Centro de Costos y Obras</h4>
-    
+    </div>
 
     <div class="row">
         <div class="input-field col s12 l5">
@@ -40,12 +40,12 @@
     <div class="row">
         <div class="col s12 l3">
             <span>Fecha Inicio</span>
-            <input type="text" class="datepicker">
+            <input type="date" name="defaultDate" class="datepicker">
         </div>
     
         <div class="col s12 l3">
             <span>Fecha Fin</span>
-            <input type="text" class="datepicker">
+            <input type="date" name="defaultDate" class="datepicker">
         </div>
     </div>
 
@@ -74,15 +74,10 @@
 
     </div>
 
-
-
-    <div class="row" style="text-align: center;">
-
-        <a class="waves-effect waves-light btn" style="background-color: #3AAC00;">Nuevo</a>
-        <a class="waves-effect waves-light btn" style="background-color: #3AAC00;">Guardar</a>
-        <a class="waves-effect waves-light btn" style="background-color: #3AAC00;">Modificar</a>
-        <a class="waves-effect waves-light btn" style="background-color: #3AAC00;">Eliminar</a>
-
+    <div class="row" style="text-align: center; margin-top: 2%;">
+            <a class="waves-effect waves-light btn" style="background-color: #3AAC00; margin-right: 5%;">Nuevo</a>
+            <a class="waves-effect waves-light btn" style="background-color: #3AAC00; margin-right: 5%;">Guardar</a>
+            <a class="waves-effect waves-light btn" style="background-color: #3AAC00; margin-right: 5%;">Modificar</a>
+            <a class="waves-effect waves-light btn" style="background-color: #3AAC00;">Eliminar</a>
     </div>
-
 </div>
