--- a/views/registro-orden-compra-servicios.html
+++ b/views/registro-orden-compra-servicios.html
@@ -1,36 +1,47 @@
 <div class="container">
 
+    <div class="row" style="text-align: center; margin: 6% 0 8% 0;">
+        <h4>Registro de Orden de Compra / Servicios</h4>
+    </div>
+
     <div class="row">
-        <div class="col s12 l3">
+        <div class="col s3 l3">
             <label>Fecha Inicio</label>
-            <input placeholder="" type="text" class="datepicker">
+            <input placeholder="" type="date" name="defaultDate" class="datepicker">
+        </div>
+        
+        <div class="col s1 l1">
+
         </div>
 
-        <div class="input-field col s12 l3">
+        <div class="col s2 l2">
+
+        </div>
+
+        <div class="input-field col s2 l2">
             <input placeholder="" type="text" class="">
             <label>Código Operación</label>
         </div>
 
-        <div class="input-field col s12 l3">
+        <div class="input-field col s2 l2">
             <input placeholder="" type="text" class="">
             <label>Código Orden Compra</label>
         </div>
 
-        <div class="input-field col s12 l3">
+        <div class="input-field col s2 l2">
             <input placeholder="" type="text" class="">
             <label>Código Requerimiento</label>
         </div>
-        
     </div>
 
     <div class="row">
-        <div class="input-field col s4 l4">
+        <div class="input-field col s5 l5">
             <input placeholder="" type="text" class="">
             <label for="">Proveedor</label>
         </div>
 
-        <div class="input-field col s13 l2">
-            <a class="waves-effect waves-light btn-small"><i class="material-icons">search</i></a>
+        <div class="input-field col s1 l1">
+            <a class="waves-effect waves-light btn-small" style="background-color: #3AAC00;"><i class="material-icons">search</i></a>
         </div>
 
         <div class="col s3 l4">
@@ -49,5 +60,65 @@
             <label for="disabled">Estado</label>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col s12 m12">
+          <div class="card">
+            <div class="card-content black-text">
+                <table class="responsable-table">
+                    <thead>
+                        <tr>
+                            <th>Item</th>
+                            <th>Cantidad</th>
+                            <th>Unidad</th>
+                            <th>Concepto</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>3</td>
+                            <td>UNIDAD</td>
+                            <td>Sellador CPPG GL 65005</td>
+                            <td><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">clear</i></a></td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>6</td>
+                            <td>UNIDAD</td>
+                            <td>Lija Agua ASA Grano 120 63118</td>
+                            <td><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">clear</i></a></td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>6</td>
+                            <td>UNIDAD</td>
+                            <td>Rodillo Toro Amarillo 9 PG 69876</td>
+                            <td><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">clear</i></a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="card-action">
+                <a class="btn-floating btn-small waves-effect waves-light green">
+                    <i class="material-icons">add</i>
+                </a>
+              <span>Agregar item</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row" style="text-align: right;">
+        <a class="waves-effect waves-light btn" style="background-color:#888888;">Registro de Comprobante</a>
+        <a class="waves-effect waves-light btn" style="background-color:#888888;"><i class="material-icons">attach_file</i>Ver Adjuntos</a>
+      </div>
+
+      <div class="row" style="text-align: center;">
+        <a class="waves-effect waves-light btn green">Nuevo</a>
+        <a class="waves-effect waves-light btn" style="background-color: #3AAC00;">Guardar</a>
+        <a class="waves-effect waves-light btn" style="background-color: #3AAC00;">Modificar</a>
+        <a class="waves-effect waves-light btn" style="background-color: #3AAC00;">Eliminar</a>
+      </div>
 
 </div>
