--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -4,13 +4,15 @@
 
     <title>{{titulo_pagina}}</title>
 
+    <script src="/app/js/main.js"></script>
+
     {{> cabecera}}
 
 </head>
 <body>
     <main>
-
         {{> menu}}
+
 
         {{{body}}}
 
