--- a/views/partials/menu.html
+++ b/views/partials/menu.html
@@ -1,15 +1,26 @@
-<div class="container-section">
-    <a href="" class="sidenav-trigger" data-target="menu-side">
-        <i class="material-icons">menu</i>
-    </a>
-
-    <ul class="sidenav" id="menu-side">
-        <li>
-            <div class="user-view">
-                <div class="background">
-                    <a href="." class="brand-logo left" ><img src="/app/images/logo-blanco.png" alt="" class="responsive-img" width="90"/></a>
-                </div>
+<ul id="slide-out" class="sidenav sidenav-fixed collapsible">
+    <li>
+        <div class="user-view" style="height: 100px; text-align: center;" >
+            <div class="background">
+                <img src="/app/images/logo-blanco.png" alt="" width="130">
             </div>
-        </li>
-    </ul>
-</div>
+        </div>
+    </li>
+    
+    <li><a href="#!">Second Sidebar Link</a></li>
+    <li><a href="#!">Second Sidebar Link</a></li>
+    <button class="accordion">Section 1</button>
+    <div class="panel">
+      <p>Lorem ipsum...</p>
+    </div>
+    
+    <button class="accordion">Section 2</button>
+    <div class="panel">
+      <p>Lorem ipsum...</p>
+    </div>
+    
+    <button class="accordion">Section 3</button>
+    <div class="panel">
+      <p>Lorem ipsum...</p>
+    </div>
+</ul>
