Sidenav Collapsible terminado

--- a/views/partials/menu.html
+++ b/views/partials/menu.html
@@ -1,26 +1,45 @@
-<ul id="slide-out" class="sidenav sidenav-fixed collapsible">
+<ul id="slide-out" class="sidenav sidenav-fixed">
     <li>
         <div class="user-view" style="height: 100px; text-align: center;" >
-            <div class="background">
+            <div class="background" style=" background-color: #0034AC;">
                 <img src="/app/images/logo-blanco.png" alt="" width="130">
             </div>
         </div>
     </li>
     
-    <li><a href="#!">Second Sidebar Link</a></li>
-    <li><a href="#!">Second Sidebar Link</a></li>
-    <button class="accordion">Section 1</button>
-    <div class="panel">
-      <p>Lorem ipsum...</p>
-    </div>
-    
-    <button class="accordion">Section 2</button>
-    <div class="panel">
-      <p>Lorem ipsum...</p>
-    </div>
-    
-    <button class="accordion">Section 3</button>
-    <div class="panel">
-      <p>Lorem ipsum...</p>
-    </div>
+<ul class="collapsible" data-collapsible="accordion">    
+    <li>
+      <div class="collapsible-header">
+        <a href="#!">Mantenimiento</a>
+      </div>
+
+      <div class="collapsible-body">
+        <a href="#!">Centro de Costos / Obras</a>
+        <a href="#!">Partidas y Sub Partidas</a>
+        <a href="">Area</a>
+        <a href="">Proveedores</a>
+      </div>
+    </li>
+
+    <li>
+
+      <div class="collapsible-header">
+        <a href="">Centro de Costos y Obras</a>
+      </div>
+    </li>
+
+    <li>
+
+      <div class="collapsible-header">
+        <a href="">Consultas</a>
+      </div>
+    </li>
+
+    <li>
+      <div class="collapsible">
+        <a href="">Reportes</a>
+      </div>
+    </li>
+</ul>
+
 </ul>
