--- a/public/css/style.css
+++ b/public/css/style.css
@@ -125,26 +125,37 @@ background-color: #0034AC;
 
 .sidenav {
   height: 100%;
-  width: 200px;
+  width: 220px;
   position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #0034AC;
+  background-color: #002272;
   overflow-x: hidden;
-  padding-top: 20px;
+  
+}
+
+.background{
+  padding: 15px 0 20px 0;
 }
 
 .sidenav li a {
+  height: 100%;
   padding: 8px 8px 8px 32px;
-  
   text-decoration: none;
   font-size: 15px;
+  background-color: #002272;
   color: #818181;
   display: block;
-  transition: 0.3s;}
+  
+}
+
+.sidenav li:hover{
+  background-color: #0034AC;
+}
 
 .sidenav a:hover {
+  background-color: #0034AC;
   color: #f1f1f1;
 }
 
@@ -153,34 +164,13 @@ header, main, footer {
   padding-left: 200px;
 }
 
+.collapsible-header{
+padding: 0%;
+}
+
+
 @media only screen and (max-width : 992px) {
   header, main, footer {
     padding-left: 0;
   }
-}
-
-/* Style the buttons that are used to open and close the accordion panel */
-.accordion {
-  background-color: #eee;
-  color: #444;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  text-align: left;
-  border: none;
-  outline: none;
-  transition: 0.4s;
-}
-
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active, .accordion:hover {
-  background-color: #ccc;
-}
-
-/* Style the accordion panel. Note: hidden by default */
-.panel {
-  padding: 0 18px;
-  background-color: white;
-  display: none;
-  overflow: hidden;
 }
