--- a/views/mant-partidas-subpartidas.html
+++ b/views/mant-partidas-subpartidas.html
@@ -1,43 +1,42 @@
 <div class="container">
+    <div class="row center cabecera">
+        <h4>Partidas y Sub-Partidas</h4>
+    </div>
+    
+    <div class="row center">
+            <form action="#">
+                <p>
+                    <label style="margin-right: 50px;">
+                        <input name="group1" type="radio"  />
+                        <span>Partida</span>
+                    </label>
 
-    <h3>Partidas y Sub-Partidas</h3>
-
-    <div class="row" style="text-align: center;">
-        <form action="#">
-            <p>
-              <label>
-                <input name="group1" type="radio"  />
-                <span>Partida</span>
-              </label>
-
-              <label>
-                <input name="group1" type="radio" />
-                <span>Sub-Partida</span>
-              </label>
-            </p>
-        </form>
+                    <label style="margin-left: 50px;">
+                        <input name="group1" type="radio" />
+                        <span>Sub-Partida</span>
+                    </label>
+                </p>
+            </form>
     </div>
 
-    <div class="row">
+    <div class="row" style="margin-top: 8%;">
 
-        <div class="input-field col s12 l6">
+        <div class="input-field col s11 l11">
             <input type="text" name="" id="nombre" value="{{Nombre}}">
             <label>Nombre de la Partida</label>
         </div>
         
-        <div class="input-field col s12 l6">
+        <div class="input-field col s1 l1">
             <a class="waves-effect waves-light btn-small"><i class="material-icons">search</i></a>
         </div>
 
     </div>
 
-    <div class="row" style="text-align: center;">
-
-        <a class="waves-effect waves-light btn">Nuevo</a>
-        <a class="waves-effect waves-light btn">Guardar</a>
-        <a class="waves-effect waves-light btn">Modificar</a>
-        <a class="waves-effect waves-light btn">Eliminar</a>
-
+    <div class="row" style="text-align: center; margin-top: 8%;">
+        <a class="btn">Nuevo</a>
+            <a class="btn">Guardar</a>
+            <a class="btn">Modificar</a>
+            <a class="btn">Eliminar</a>
     </div>
 
 </div>
