--- a/views/mant-proveedores.html
+++ b/views/mant-proveedores.html
@@ -1,21 +1,17 @@
 <div class="container">
 
-    <h3>Proveedores</h3>
-
-    <div class="row">
-       
-        <div class="input-field col s12 l6">
-            <input type="text" name="" id="nombre" value="{{Nombre}}">
-            <label>Razón Social / RUC</label>
-        </div>
-
-        <div class="input-field col s12 l6">
-            <a class="waves-effect waves-light btn-small"><i class="material-icons">search</i></a>
-        </div>
+    <div class="row center cabecera">
+        <h4>Proveedores</h4>
     </div>
 
     <div class="row">
-        <div class="input-field col s12 l6">
+       
+        <div class="input-field col s4 l4">
+            <input type="text" name="" id="nombre" value="{{Nombre}}">
+            <label>Razón Social / RUC</label>
+        </div>
+    
+        <div class="input-field col s8 l8">
             <input type="text" name="" id="nombre" value="{{Nombre}}">
             <label>Nombre de contacto</label>
         </div>
@@ -23,21 +19,18 @@
     </div>
 
     <div class="row">
-        <div class="input-field col s12 l6">
+        <div class="input-field col s4 l4">
             <input type="text" name="" id="nombre" value="{{Nombre}}">
             <label>Correo electrónico</label>
         </div>
-    </div>
-
-    <div class="row">
-        <div class="input-field col s12 l6">
+        <div class="input-field col s8 l8">
             <input type="text" name="" id="nombre" value="{{Nombre}}">
             <label>Dirección</label>
         </div>
     </div>
 
     <div class="row">
-        <div class="col s12 l6">
+        <div class="col s6 l6">
         <label>Distrito</label>
             <select class="browser-default">
                 <option value="" disabled selected>Elija un distrito</option>
@@ -46,15 +39,13 @@
                 <option value="3">Option 3</option>
             </select>
         </div>
-    </div>
-
-    <div class="row">
-        <div class="input-field col s12 l3">
+    
+        <div class="input-field col s3 l3">
             <input type="text" name="" id="nombre" value="{{Nombre}}">
             <label>Teléfono</label>
         </div>
 
-        <div class="input-field col s12 l3">
+        <div class="input-field col s3 l3">
             <input type="text" name="" id="nombre" value="{{Nombre}}">
             <label>Anexo</label>
         </div>
@@ -63,10 +54,10 @@
 
     <div class="row" style="text-align: center;">
 
-        <a class="waves-effect waves-light btn">Nuevo</a>
-        <a class="waves-effect waves-light btn">Guardar</a>
-        <a class="waves-effect waves-light btn">Modificar</a>
-        <a class="waves-effect waves-light btn">Eliminar</a>
+        <a class="btn">Nuevo</a>
+        <a class="btn">Guardar</a>
+        <a class="btn">Modificar</a>
+        <a class="btn">Eliminar</a>
 
     </div>
 
