--- a/public/css/style.css
+++ b/public/css/style.css
@@ -125,52 +125,75 @@ background-color: #0034AC;
 
 .sidenav {
   height: 100%;
-  width: 220px;
+  width: 250px;
   position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #002272;
+  background-color: #0034AC;
   overflow-x: hidden;
   
 }
 
 .background{
-  padding: 15px 0 20px 0;
+  padding: 25px 0 20px 0;
 }
 
 .sidenav li a {
   height: 100%;
-  padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 16.5px;
+  color: #d1d1d1;
+  display: block; 
+  padding-left: 10px;
+}
+
+
+.sidenav .collapsible :hover{
   background-color: #002272;
-  color: #818181;
-  display: block;
+}
+
+.sidenav .collapsible-header :active{
+  background-color: #002272;
+}
+
+.sidenav .collapsible-body{
+  background-color: #002272;
+  padding-left: 30px;
   
 }
 
-.sidenav li:hover{
-  background-color: #0034AC;
-}
-
-.sidenav a:hover {
-  background-color: #0034AC;
-  color: #f1f1f1;
-}
-
-
 header, main, footer {
-  padding-left: 200px;
+  padding-left: 250px;
 }
 
-.collapsible-header{
-padding: 0%;
-}
 
 
 @media only screen and (max-width : 992px) {
   header, main, footer {
     padding-left: 0;
   }
+}
+
+.cabecera{
+  margin: 6% 0 6% 0%;
+}
+
+.btn{
+  background-color: rgb(59, 78, 121); 
+  margin-right: 5%;
+}
+
+.btn:hover{
+  background-color: rgb(86, 113, 175);
+}
+
+.btn-small{
+  background-color: #818181;
+  margin-top: 26%;
+}
+
+
+.btn-small:hover{
+  background-color: #585858;
 }
