--- a/views/mant-area.html
+++ b/views/mant-area.html
@@ -1,14 +1,16 @@
 <div class="container">
-    <h3>Area</h3>
+    <div class="row center cabecera">
+        <h3>Area</h3>
+    </div>
 
     <div class="row" style="text-align: center;">
 
-        <div class="input-field col s12 l6">
+        <div class="input-field col s11 l11">
             <input type="text" name="" id="nombre" value="{{Nombre}}">
             <label>Nombre de la Partida</label>
         </div>
         
-        <div class="input-field col s12 l6">
+        <div class="input-field col s1 l1">
             <a class="waves-effect waves-light btn-small"><i class="material-icons">search</i></a>
         </div>
 
@@ -16,10 +18,10 @@
 
     <div class="row" style="text-align: center;">
 
-        <a class="waves-effect waves-light btn">Nuevo</a>
-        <a class="waves-effect waves-light btn">Guardar</a>
-        <a class="waves-effect waves-light btn">Modificar</a>
-        <a class="waves-effect waves-light btn">Eliminar</a>
+        <a class="btn">Nuevo</a>
+        <a class="btn">Guardar</a>
+        <a class="btn">Modificar</a>
+        <a class="btn">Eliminar</a>
     
     </div>
 
