--- a/views/partials/menu.html
+++ b/views/partials/menu.html
@@ -1,15 +1,16 @@
 <ul id="slide-out" class="sidenav sidenav-fixed">
     <li>
         <div class="user-view" style="height: 100px; text-align: center;" >
-            <div class="background" style=" background-color: #0034AC;">
-                <img src="/app/images/logo-blanco.png" alt="" width="130">
+            <div class="background">
+                <img src="/app/images/logo-blanco.png" alt="" width="170">
             </div>
         </div>
+            
     </li>
     
 <ul class="collapsible" data-collapsible="accordion">    
     <li>
-      <div class="collapsible-header">
+      <div class="collapsible-header" style="margin-top: 20%;">
         <a href="#!">Mantenimiento</a>
       </div>
 
@@ -24,7 +25,7 @@
     <li>
 
       <div class="collapsible-header">
-        <a href="">Centro de Costos y Obras</a>
+        <a href="">Registro de Compras/Obras</a>
       </div>
     </li>
 
@@ -36,7 +37,7 @@
     </li>
 
     <li>
-      <div class="collapsible">
+      <div class="collapsible-header">
         <a href="">Reportes</a>
       </div>
     </li>
