Cambios en la home

--- a/views/home.html
+++ b/views/home.html
@@ -1,17 +1,71 @@
 <div class="container">
     
-    <h3>Elige la tarea que deseas realizar.</h3>
-
-    <div class="row" style="text-align: center; margin-top: 50px;">
-
-        <a class="waves-effect waves-light btn-large" style="width:35%; height:150px; margin-right: 3%; color: #0034AC; background-color:#F5F5F5;"><i class="material-icons">settings</i>Mantenimiento</a>
-        <a class="waves-effect waves-light btn-large" style="width:35%; height:150px; color: #0034AC; background-color: #F5F5F5;"><i class="material-icons">library_add</i>Centro de Costos y Obras</a>
-        
-        <a class="waves-effect waves-light btn-large" style="width:35%; height:150px; margin-right: 3%; margin-top: 5%; color: #0034AC; background-color: #F5F5F5;"><i class="material-icons">remove_red_eye</i>Consultas</a>
-        <a class="waves-effect waves-light btn-large" style="width:35%; height:150px; margin-top: 5%; color: #0034AC; background-color: #F5F5F5;"><i class="material-icons">style</i>Reportes</a>
-
+    <div class="row center cabecera">
+        <h3>Sistema de Obras y Presupuestos</h3>
     </div>
 
+    <div class="row">
+        <div class="col s12 l12">
+            <span style="font-size: 20px;">Obras / Compras recientes</span>
+          <div class="card">
+            <div class="card-content black-text" style="font-size: 14px;">
+              <table>
+                  <thead>
+                    <tr>
+                        <th>Fecha</th>
+                        <th>Tipo</th>
+                        <th>Número</th>
+                        <th>Proveedor</th>
+                        <th>Descripción</th>
+                        <th>P.Venta</th>
+                        <th>Centro de Costos</th>
+                    </tr>
+                    <tr>
+                        <td>05/02/20</td>
+                        <td>Factura</td>
+                        <td>002-1327</td>
+                        <td>Virgilio Chipana Ortiz</td>
+                        <td>Reparación motor bomba de agua</td>
+                        <td>S/. 420.00</td>
+                        <td>Electrobomba Safari 2HP Pileta</td>
+                    </tr>
+                    <tr>
+                        <td>04/02/20</td>
+                        <td>Factura</td>
+                        <td>A12-267512</td>
+                        <td>Homecenters Peruanos S.A.</td>
+                        <td>Válvula de ingreso inteligente</td>
+                        <td>S/. 27.74</td>
+                        <td>Sanitarios / Materiales</td>
+                    </tr>
+                    <tr>
+                        <td>03/02/20</td>
+                        <td>Factura</td>
+                        <td>F03-1660</td>
+                        <td>Comercial e Industrial Branfisa</td>
+                        <td>Reparación de lustradora</td>
+                        <td>S/. 1360.00</td>
+                        <td>Lustradora Chasky</td>
+                    </tr>
+                    <tr>
+                        <td>03/02/20</td>
+                        <td>Factura</td>
+                        <td>001-8048</td>
+                        <td>Lidegraf S.A.C</td>
+                        <td>Libros de resgistro oficio</td>
+                        <td>S/. 390.00</td>
+                        <td>Recepción 1</td>
+                    </tr>
+
+                  </thead>
+              </table>
+            </div>
+            <div class="card-action">
+
+            </div>
+          </div>
+        </div>
+      </div>
     
 </div>
 
