--- a/views/partials/menu.html
+++ b/views/partials/menu.html
@@ -1,17 +1,16 @@
-<ul id="slide-out" class="sidenav sidenav-fixed">
+<ul id="slide-out" class="sidenav sidenav-fixed" style="box-shadow: 2px 0px 7px #818181;">
     <li>
         <div class="user-view" style="height: 100px; text-align: center;" >
             <div class="background">
                 <img src="/app/images/logo-blanco.png" alt="" width="170">
             </div>
         </div>
-            
     </li>
     
 <ul class="collapsible" data-collapsible="accordion">    
     <li>
       <div class="collapsible-header" style="margin-top: 20%;">
-        <a href="#!">Mantenimiento</a>
+        <i class="material-icons">settings</i><a href="#!">Mantenimiento</a>
       </div>
 
       <div class="collapsible-body">
@@ -25,20 +24,20 @@
     <li>
 
       <div class="collapsible-header">
-        <a href="">Registro de Compras/Obras</a>
+        <i class="material-icons">library_add</i><a href="" style="line-height: 30px;">Registro de Compras/Obras</a>
       </div>
     </li>
 
     <li>
 
       <div class="collapsible-header">
-        <a href="">Consultas</a>
+        <i class="material-icons">remove_red_eye</i><a href="">Consultas</a>
       </div>
     </li>
 
     <li>
       <div class="collapsible-header">
-        <a href="">Reportes</a>
+        <i class="material-icons">style</i><a href="">Reportes</a>
       </div>
     </li>
 </ul>
