--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,7 @@ body {
 
   main {
     flex: 1 0 auto;
+    background-color: #f3f3f3;
   }
 
   .card-login{  
@@ -125,7 +126,7 @@ background-color: #0034AC;
 
 .sidenav {
   height: 100%;
-  width: 250px;
+  width: 230px;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -140,14 +141,18 @@ background-color: #0034AC;
 }
 
 .sidenav li a {
-  height: 100%;
+  height: 120%;
   text-decoration: none;
   font-size: 16.5px;
   color: #d1d1d1;
   display: block; 
-  padding-left: 10px;
+  padding-left: 16px;
 }
 
+i{
+  color: #d1d1d1;
+  padding-left: 12px;
+}
 
 .sidenav .collapsible :hover{
   background-color: #002272;
@@ -162,6 +167,11 @@ background-color: #0034AC;
   padding-left: 30px;
   
 }
+
+.sidenav .collapsible-header{
+  padding: 18px 0 18px 20px;
+}
+
 
 header, main, footer {
   padding-left: 250px;
