--- a/views/centro-costos-obras.html
+++ b/views/centro-costos-obras.html
@@ -1,18 +1,18 @@
 <div class="container">
 
-    <h3>Centro de Costos y Obras</h3>
-
+    <div class="row centro cabecera">
+        <h3>Centro de Costos y Obras</h3>
+    </div>
+    
     <div class="row">
-
-        <div class="input-field col s12 l5">
+        <div class="input-field col s7 l7">
             <input type="text" name="" id="" value="">
             <label for="">Buscar</label>
         </div>
 
-        <div class="input-field col s12 l7">
-            <a class="btn"><i class="material-icons">search</i></a>
+        <div class="input-field col s1 l1">
+            <a class="btn-small"><i class="material-icons">search</i></a>
         </div>
-
     </div>
 
     <div class="row">
