Diseños de Registros y Centro de Costos

--- a/views/centro-costos-obras.html
+++ b/views/centro-costos-obras.html
@@ -20,10 +20,43 @@
     </div>
 
     <div class="row">
+        <div class="col s12 l12">
+            <span style="font-size: 20px;">Proyectos recientes</span>
+          <div class="card">
+            <div class="card-content black-text" style="font-size: 14px;">
+              <table>
+                  <thead>
+                    <tr>
+                        <th>Fecha</th>
+                        <th>Proyecto</th>
+                        <th>Estado</th>
+                        
+                    </tr>
+                  </thead>
+                    <tr>
+                        <td>05/02/20</td>
+                        <td>Defensa Civil 2020</td>
+                        <td>Pendiente</td>
+                        
+                    </tr>
+                    <tr>
+                        <td>04/02/20</td>
+                        <td>Piscina Semi Olímpica</td>
+                        <td>Terminado</td>
+                        
+                    </tr>
+                    <tr>
+                        <td>03/02/20</td>
+                        <td>Aire Acondicionado YORK 18000 BTU</td>
+                        <td>Terminado</td>
+                    </tr>
+              </table>
+            </div>
+            <div class="card-action">
 
-        <h4>Proyectos recientes</h4>
-
-        <hr>
-    </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
 </div>
