--- a/views/detalle-centro-costos-obras.html
+++ b/views/detalle-centro-costos-obras.html
@@ -1,19 +1,19 @@
 <div class="container">
     
-    <div class="row">
+    <div class="row cabecera">
 
         <div class="col s12 l6">
             <span style="font-size: 24px;">Centro de Costos 3</span>
         </div>
 
         <div class="col s12 l3">
-            <a class="btn-floating btn-large waves-effect waves-light green"><i class="material-icons">add</i></a>
-            <label for="" style="color: #454545; font-size: 16px;">Nueva O.Compra</label>
+            <a class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
+            <label for="" style="color: #454545; font-size: 14px;">Nueva O.Compra</label>
         </div>
 
         <div class="col s12 l3">
-            <a class="btn-floating btn-large waves-effect waves-light green"><i class="material-icons">add</i></a>
-            <label for="" style="color: #454545; font-size: 16px;">Nueva O.Servicio</label>
+            <a class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
+            <label for="" style="color: #454545; font-size: 14px;">Nueva O.Servicio</label>
         </div>
 
     </div>
