--- a/views/login.html
+++ b/views/login.html
@@ -67,7 +67,7 @@
 
                     <section class="container-wide" id="imgporta" style="width: 65%;float: left; padding-left: 90px;">
 
-                        <img src="application/assets/img/portada_sicV2.png" class="responsive-img" alt="" style="width: 100%;">
+                        <!-- <img src="application/assets/img/portada_sicV2.png" class="responsive-img" alt="" style="width: 100%;"> -->
 
                     </section>
 
