--- a/views/partials/menu.html
+++ b/views/partials/menu.html
@@ -14,7 +14,7 @@
       </div>
 
       <div class="collapsible-body">
-        <a href="#!" style="line-height: 25px;">Centro de Costos / Obras</a>
+        <a href="./mantenimiento-centro-de-costos-y-obras" style="line-height: 25px;">Centro de Costos / Obras</a>
         <a href="#!">Partidas y Sub Partidas</a>
         <a href="">Area</a>
         <a href="">Proveedores</a>
