--- a/views/home.html
+++ b/views/home.html
@@ -6,7 +6,7 @@
 
     <div class="row">
         <div class="col s12 l12">
-            <span style="font-size: 20px;">Obras / Compras recientes</span>
+            <span style="font-size: 20px;">Últimos registros</span>
           <div class="card">
             <div class="card-content black-text" style="font-size: 14px;">
               <table>
@@ -61,9 +61,7 @@
                   
               </table>
             </div>
-            <div class="card-action">
-
-            </div>
+            
           </div>
         </div>
       </div>
